@@ -1,3 +1,7 @@
+2011-02-11  Christian Kuhn  <lolli@schwarzbu.ch>
+
+	* Fixed bug #15721: Memcache::delete() without timeout param causes loss of memcache server in pool (Thanks to Michiel Ross)
+
 2011-02-10  Christian Kuhn  <lolli@schwarzbu.ch>
 
 	* Fixed bug #12230: Function tslib_cObj::crop() is not fully multibyte safe (Thanks to Vladimir Podkovanov)
